Add user settings which are stored into localStorage

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "inferno-component": "^3.0.4",
     "inferno-redux": "^3.0.4",
     "inferno-router": "^3.0.4",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-localstorage": "^0.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
